--- a/Global-Configs/Unbound/custom-unbound.conf
+++ b/Global-Configs/Unbound/custom-unbound.conf
@@ -279,11 +279,11 @@ server:
 # OPTIONAL:
 # Forward Secure DNS to upstream provider Cloudflare DNS
 
-    #forward-zone:
-        #name: "."
-        #forward-addr: 1.1.1.1@853#cloudflare-dns.com
-        #forward-addr: 1.0.0.1@853#cloudflare-dns.com
-        #forward-tls-upstream: yes
+    forward-zone:
+        name: "."
+        forward-addr: 1.1.1.1@853#cloudflare-dns.com
+        forward-addr: 1.0.0.1@853#cloudflare-dns.com
+        forward-tls-upstream: yes
 
 
     remote-control:
