--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ WG-Dash/src/wg-dashboard.ini
 run-log.txt
 Global-Configs/Master-Key/master.conf
 Global-Configs/Master-Key/master.conf
+Global-Configs/Master-Key/master.conf
